--- a/holyland.html
+++ b/holyland.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/cross-1314151-960-720-64x64.png" type="image/x-icon">
   <meta name="description" content="Website Maker Description">
   
-  <title>Holy Land</title>
+  <title>Tierra Santa</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -45,7 +45,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="Home.html">
-                        Chambers Agency Travels</a></span>
+                        Chambers Travel&nbsp;Agency</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header1 cid-rDpLkolbiU" id="header1-1h">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="header1 cid-rDpLkolbiU" id="header1-1h">
 
     
 
@@ -247,7 +247,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sj6+E0SODFA9oEOWfuKFzbzzFK8oWAYFTv9bnlgk/4qFKJtFGbELSfxeR6Uk2WGgmQ4d7Fcx5DgVTbH68nfcXU8MKvG/Lhq/JEKsdaw7asikIOvxp9oxFQJSQ6JGG9jV">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cSIVWGqRaI6vTsHTuEDBNyvAGM3y/f6Tm9Mf2fEesTEkbctpezU28etykcegHauWZTVLI8AN/fNs1Q8Hznhdq6joDHy3BWtnPHLDB5LQTPs41lHw21S8gQMvGO9g8Poo">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
