--- a/mexico.html
+++ b/mexico.html
@@ -45,7 +45,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="Home.html">
-                        Chambers Agency Travels</a></span>
+                        Chambers Travel&nbsp;Agency</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header1 cid-rDpa92ezaH" id="header1-11">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header1 cid-rDpa92ezaH" id="header1-11">
 
     
 
@@ -288,7 +288,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G4x5CQDTz9K8qpqX7nK8/MEnaSgnesoCKQ5ynt4EO7A3jNKvGgdfxpUe/FyjYe8q2tlL60qU5OMvcWwE3mpxFriLpISS160pRzIZ6tDC/h4RuccVsGuDgBr17Bg7bMY9">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="/12lyZu2NWnN+eVkAJD/wg9BEdDl8Bzf8lRJAxevFO4maHMhl7NSQ1aYI2qGFDT/4Rah0Pu4Bdn8x2s48hX0jhCwPK01ODElTLcVljclIOgLSl23Sa5jjUkKwh8Tnn0=">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
