--- a/paris.html
+++ b/paris.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/cross-1314151-960-720-64x64.png" type="image/x-icon">
   <meta name="description" content="Website Maker Description">
   
-  <title>Paris and Lourdes</title>
+  <title>Paris y Lourdes</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -45,7 +45,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="Home.html">
-                        Chambers Agency Travels</a></span>
+                        Chambers Travel&nbsp;Agency</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-rDpLxOAxK9" id="header1-1k">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="header1 cid-rDpLxOAxK9" id="header1-1k">
 
     
 
@@ -329,7 +329,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pT4kLzjZDK3zh3ZLlxA4jZAYEL+mF/rDt+3QIBs+JsnVVQrelDzQEhR3IiYDMGTcNHBOvWgshWl5Wgli/ypAbdZQnSB9qYbidBX93W2jmAIPr51z2m5G/Wf1xaADhUhE">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uIWHYHCjXUfc3zzdAE7s7b6NFfztKoEyNirdjFe3QZOwewEBQ6nGsGeLpumLLw+Qu1OahQBgOO0Vvx5aTGinJSjq/hyOpmO99Hui/TGMHYZ6FL6U1hWTT6VnbDHWA31T">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
