--- a/rome.html
+++ b/rome.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/cross-1314151-960-720-64x64.png" type="image/x-icon">
   <meta name="description" content="Site Builder Description">
   
-  <title>Rome</title>
+  <title>Roma</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -45,7 +45,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="Home.html">
-                        Chambers Agency Travels</a></span>
+                        Chambers Travel&nbsp;Agency</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="header1 cid-rDpLDMroGA" id="header1-1m">
+<section class="engine"><a href="https://mobirise.info/f">easy web maker</a></section><section class="header1 cid-rDpLDMroGA" id="header1-1m">
 
     
 
@@ -334,7 +334,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="y1vv6BWQKP6JS6+H2PSeXUnIP7i7aiLnpN/3oaII20QPgP3fLGW+eUIHMCwpRNhlUTT9nsEtRoFDF4hYmEIEBfbAFPejHIChvTURZ1ph8aCPO1r+awEk53A/OjKH23RP">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VkFQTbZbQv6spRIqJEdrIHwhQnQrBrf7+6madDxJ6l7e8nVSKnwuFKzkOkRgVBtfjcppsjzsTes/v9zKd9cM/dOEl1kXEcgDHExfzczgVJ+IILOxD5PcJTjT8+yznE3M">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
