--- a/poland.html
+++ b/poland.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/cross-1314151-960-720-64x64.png" type="image/x-icon">
   <meta name="description" content="Site Generator Description">
   
-  <title>Poland</title>
+  <title>Polonia</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -45,7 +45,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="Home.html">
-                        Chambers Agency Travels</a></span>
+                        Chambers Travel&nbsp;Agency</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-rDpLBjlrNA" id="header1-1l">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header1 cid-rDpLBjlrNA" id="header1-1l">
 
     
 
@@ -283,7 +283,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MDlcPPvYRK76HlSQTEODWI8zZRUsTMS/ZtD41zX0xGx9pmTgbPjl39ljFwSMVpP7J2y9EzyXJsthVCLqanfE0LF7ysQPgGkKu46RUgCKWLTE2UAkEImjs1Rf4QuFMb1v">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MFWvF/A7YVE2oPKa3zr0nxOba7HVztp43wDnJoosbNpjgegmEsVTOXU9zhGLSUma5l0/PUMdy7g5EO4Q6yzfRJU7pl4stpFRJ+CJRJs/CRTFDewBBvDR3bstODJd/2x4">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
