create github pages

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header1 cid-rDpLh03lun" id="header1-1g">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="header1 cid-rDpLh03lun" id="header1-1g">
 
     
 
@@ -121,7 +121,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MfM8Dac7VfBPhglB6Zs4CIg5RXQJFhAbRCoRnwcCGNbQMNrgVIDKwCvrxDolpQo/tbA3XRlq0DVgsiNQe1fcFA3GiEyhyyPMdtiSy4VL7aEKjfpd056QbhfRylXKRwTe">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3twxDC4KWUtHORXAXvAiIEEfWGNSzqlwPCi/QnGiUz/nIMZp8GnDIRf8ExloN9Mw/ezCMQzT1NTjbeqZN7gawjWEuc+sySDeQZQ18vYGPEvsE4aFc5CgTwi/jhYstWCg">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -185,7 +185,7 @@
     </div>
 </section>
 
-<section class="footer4 cid-rDpMFOfIML" id="footer4-1x">
+<section class="footer4 cid-rDv3T5F5AD" id="footer4-3e">
 
     
 
@@ -200,29 +200,24 @@
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7"><a href="index.html" class="text-white">Chambers Travels</a></p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">Travels<br><a href="services.html" class="text-white">Services</a>
-                    <br><a href="aboutus.html" class="text-white">About Us</a><br><a href="contact.html" class="text-white"></a><a href="contact.html" class="text-white">Contact</a></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">Viajes<br><a href="services.html" class="text-white">Servic</a>ios&nbsp;<br>Politicas de Privacidad<br><a href="contact.html" class="text-white"></a><a href="contact.html" class="text-white">Contact</a>o</p>
             </div>
             <div class="col-md-4 col-sm-8">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
-                    RECENT NEWS
-                </p>
-                <p class="mbr-text mbr-fonts-style foot-text display-7">Please make your deposit payable to: and send it to: 
+                    IMPORTANTE</p>
+                <p class="mbr-text mbr-fonts-style foot-text display-7">Haga su depósito al siguiente nombre y envíelo a:
 <br>
-<br>Jesus of Nazareth Pilgrimages 
-<br>6407 Brookgate Dr 
+<br>Peregrinaciones de Jesús de Nazaret
+<br>6407 Brookgate Dr
 <br>Spring, TX 77373</p>
             </div>
             <div class="col-md-4 offset-md-1 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
-                    SUBSCRIBE
-                </p>
-                <p class="mbr-text mbr-fonts-style form-text display-7">
-                    Get monthly updates and free resources.
-                </p>
+                    Suscribirse</p>
+                <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uLMmSlS9D/le3WFqLCgxAVA6USuzoeoZzjj7+lY6+MveJu8j9UW6gMW+vZi5o+DVkPhndYU5xfXD3A3iT/iNAV0B2EcsbnupaFIaWvmetfdIovL8Wx65BMVCgMQ0V94t">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kSMXY+WBsjjLHyY36DDWlYzfjE8H8iqR4Ie7fp4mJYukASDB80PbNxFF1/Te/yzswbMD7Ldbbyfp8Z5/EeW5HIgqHSy+oUwOMGoMG6y1SHAzTJDC+9xqqQRIL7kdQKFG">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -230,15 +225,13 @@
                         </div>
                         <div class="dragArea row form-inline justify-content-center">
                             <div class="col-auto  form-group " data-for="email">
-                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer4-1x">
+                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer4-3e">
                             </div>
-                            <div class="col-auto  input-group-btn  m-2"><button type="submit" class="btn m-0 btn-danger display-4">Subscribe</button></div>
+                            <div class="col-auto  input-group-btn  m-2"><button type="submit" class="btn m-0 btn-danger display-4">Subscribirse</button></div>
                         </div>
                     </form><!---Formbuilder Form--->
                 </div>
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    CONNECT WITH US
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7">CONECTATE CON NOSOTROS&nbsp;<br></p>
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
                             <a href="https://twitter.com/mobirise" target="_blank">
@@ -282,8 +275,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-12 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2019 Chambers Travels - All Rights Reserved
-                    </p>
+                        © Copyright 2019 Chambers Travels - Todos los derechos reservados.<br></p>
                 </div>
             </div>
         </div>
