--- a/tierrasanta.html
+++ b/tierrasanta.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section class="header1 cid-rDpLGeNysL" id="header1-1n">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="header1 cid-rDpLGeNysL" id="header1-1n">
 
     
 
@@ -293,7 +293,7 @@
     </div>
 </section>
 
-<section class="footer4 cid-rDpN1JtEjQ" id="footer4-2j">
+<section class="footer4 cid-rDv4zieLDb" id="footer4-3n">
 
     
 
@@ -308,29 +308,24 @@
                     </a>
                 </div>
                 <p class="mb-3 mbr-fonts-style foot-title display-7"><a href="index.html" class="text-white">Chambers Travels</a></p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">Travels<br><a href="services.html" class="text-white">Services</a>
-                    <br><a href="aboutus.html" class="text-white">About Us</a><br><a href="contact.html" class="text-white"></a><a href="contact.html" class="text-white">Contact</a></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">Viajes<br><a href="services.html" class="text-white">Servic</a>ios&nbsp;<br>Politicas de Privacidad<br><a href="contact.html" class="text-white"></a><a href="contact.html" class="text-white">Contact</a>o</p>
             </div>
             <div class="col-md-4 col-sm-8">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
-                    RECENT NEWS
-                </p>
-                <p class="mbr-text mbr-fonts-style foot-text display-7">Please make your deposit payable to: and send it to: 
+                    IMPORTANTE</p>
+                <p class="mbr-text mbr-fonts-style foot-text display-7">Haga su depósito al siguiente nombre y envíelo a:
 <br>
-<br>Jesus of Nazareth Pilgrimages 
-<br>6407 Brookgate Dr 
+<br>Peregrinaciones de Jesús de Nazaret
+<br>6407 Brookgate Dr
 <br>Spring, TX 77373</p>
             </div>
             <div class="col-md-4 offset-md-1 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
-                    SUBSCRIBE
-                </p>
-                <p class="mbr-text mbr-fonts-style form-text display-7">
-                    Get monthly updates and free resources.
-                </p>
+                    Suscribirse</p>
+                <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0jgjTIRAjaVOyk6+U+9ZCSfQMADyPd8ynOhA7b/VG4pG4NFGtNPZFrUt4fggZG4/rB3a0Ezqjs0J/FHlxApAnqVy6Wtu6XzWHeyUl2ToBxaupYy/ZX71uW6mKLc8YdsZ">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ej/GoVlPU6xFi0Ts/lvj6cWnlHlaZe/Pug8pxyGl86MGgTPeqStJzsf0F7nZPDi5uLTYddFUr3Md/jJmfZdH3a6cjHLzaKdUQBjlLzEFTcMA8A2mAFlSTz7x/tv29vvh">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -338,15 +333,13 @@
                         </div>
                         <div class="dragArea row form-inline justify-content-center">
                             <div class="col-auto  form-group " data-for="email">
-                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer4-2j">
+                                <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer4-3n">
                             </div>
-                            <div class="col-auto  input-group-btn  m-2"><button type="submit" class="btn m-0 btn-danger display-4">Subscribe</button></div>
+                            <div class="col-auto  input-group-btn  m-2"><button type="submit" class="btn m-0 btn-danger display-4">Subscribirse</button></div>
                         </div>
                     </form><!---Formbuilder Form--->
                 </div>
-                <p class="mb-4 mbr-fonts-style foot-title display-7">
-                    CONNECT WITH US
-                </p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7">CONECTATE CON NOSOTROS&nbsp;<br></p>
                 <div class="social-list pl-0 mb-0">
                         <div class="soc-item">
                             <a href="https://twitter.com/mobirise" target="_blank">
@@ -390,8 +383,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-12 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2019 Chambers Travels - All Rights Reserved
-                    </p>
+                        © Copyright 2019 Chambers Travels - Todos los derechos reservados.<br></p>
                 </div>
             </div>
         </div>
