create github pages

--- a/Home.html
+++ b/Home.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
 
     
 
@@ -76,7 +76,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Jesús de las Peregrinaciones de Nazaret</h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Peregrinaciones de Jesús de Nazaret&nbsp;</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">A través de nuestros talentos dados por Dios, debemos proporcionar un servicio superior y experimentar cambios en la vida para nutrir nuestras almas, así como visitar numerosos lugares sagrados
 <br>¡Cuán bendecidos son los que viven en su casa! Ellos alabarán continuamente y bendecirán a los que están en peregrinación.
@@ -229,7 +229,7 @@
                 <div class="panel-item p-3">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/face10.jpg">
+                            <img src="assets/images/face12.jpg">
                         </div>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, aspernatur, voluptatibus, atque, tempore molestiae.
@@ -250,7 +250,7 @@
                 <div class="panel-item p-3">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/face21.jpg">
+                            <img src="assets/images/face23.jpg">
                         </div>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, aspernatur, voluptatibus, atque, tempore molestiae.
@@ -329,7 +329,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YjBtijwZg3zpGOcZUW52MRFxmz7Td5531hx0yX/F8ywYbg1Y+9lb3k7z5yF1ynbR4wehvlqXPzR+SydOEki6Ha7GqDnvPpIChiBk9K7qF13eu9SKqGRh+8JZbxJnXVV6">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PQ9kO7/rYVEmJB8arjHDSQN9+UbYGwxkU0Tp5u0ErxORLCG6gKbBhcRj/1U+3DZ+a3GhPxSGNasNMAQoqRwm8WTU2i7fjkaoQnJwJZ3cWvJ5uWk3UYCDLrT7G4p1HUr7">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
