--- a/Home.html
+++ b/Home.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
 
     
 
@@ -325,11 +325,11 @@
             </div>
             <div class="col-md-4 offset-md-1 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
-                    Suscribirse</p>
+                    SUSCRIBIRSE</p>
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PQ9kO7/rYVEmJB8arjHDSQN9+UbYGwxkU0Tp5u0ErxORLCG6gKbBhcRj/1U+3DZ+a3GhPxSGNasNMAQoqRwm8WTU2i7fjkaoQnJwJZ3cWvJ5uWk3UYCDLrT7G4p1HUr7">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PMBYZEjSaJUDjKnZHtG0F1/15MajdciOyWrGziIpnH2gbk2sTMPhcvjBmIKhZLFhYPpYQh3mIIXA4YGbuIQWNTxqTI5aHar8cHUCyPG2dx5UQgp2lpOaPITTVEe8AsXC">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
