create github pages

--- a/fatima.html
+++ b/fatima.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="header1 cid-rDpKSvYW11" id="header1-1b">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="header1 cid-rDpKSvYW11" id="header1-1b">
 
     
 
@@ -238,11 +238,11 @@
             </div>
             <div class="col-md-4 offset-md-1 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-7">
-                    Suscribirse</p>
+                    SUSCRIBIRSE</p>
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Id+RnEp2vi3D4mrShp1OT2nvv1vTEajXjzw2TuPmC7QRdrVgCEjY7OMwDckuIHEqf/tfvIbOQqHL9SwcuvEqqJ3XsYTijPGA8Voq7+pJ1nyNdpIiQV0iOvxC/etG1EgV">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1n04aC9cZohdpgsKQuxnCyU+fxZhEiEOwZdWoAhLh+hYJa6Zro5BC5nlCxo3RvVg2LiJ/aLOBRv76XfB0nNsoBwQLp+rRTex91Vet81BBtQBmkjVoS36OX7y3PUHdh8w">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
