--- a/Home.html
+++ b/Home.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-rDoTgP6KXQ" id="header16-2">
 
     
 
@@ -176,10 +176,10 @@
         
     </div>
     <div class="container countdown-cont align-center">
-        <div class="daysCountdown" title="Days"></div>
-        <div class="hoursCountdown" title="Hours"></div> 
-        <div class="minutesCountdown" title="Minutes"></div> 
-        <div class="secondsCountdown" title="Seconds"></div>
+        <div class="daysCountdown" title="Dias"></div>
+        <div class="hoursCountdown" title="Horas"></div> 
+        <div class="minutesCountdown" title="Minutos"></div> 
+        <div class="secondsCountdown" title="Segundos"></div>
         <div class="countdown pt-5 mt-2" data-due-date="2019/11/25"> 
         </div>
     </div>
@@ -229,7 +229,7 @@
                 <div class="panel-item p-3">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/face12.jpg">
+                            <img src="assets/images/face16.jpg">
                         </div>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, aspernatur, voluptatibus, atque, tempore molestiae.
@@ -250,7 +250,7 @@
                 <div class="panel-item p-3">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/face23.jpg">
+                            <img src="assets/images/face27.jpg">
                         </div>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, aspernatur, voluptatibus, atque, tempore molestiae.
@@ -329,7 +329,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PMBYZEjSaJUDjKnZHtG0F1/15MajdciOyWrGziIpnH2gbk2sTMPhcvjBmIKhZLFhYPpYQh3mIIXA4YGbuIQWNTxqTI5aHar8cHUCyPG2dx5UQgp2lpOaPITTVEe8AsXC">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hQiudNulsmN3Em6OyVtQ72zOaTihA7NUsjaZR3A4kTnqik2ZeBHYBvzBwxTaRDmL56ZcH1iBdw3RMfSU1b6qAOTG941z9iBjj8E8vyEybP4zBnF/fTIKeq0paVLGx8lf">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
