create github pages

--- a/mexico.html
+++ b/mexico.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header1 cid-rDpa92ezaH" id="header1-11">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header1 cid-rDpa92ezaH" id="header1-11">
 
     
 
@@ -285,7 +285,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FVky59TQ1AAc4h0dOn3XuRTycqsue4FO7BM0VuiDrmtzSsRRo2hhXaxgJg6zy6C5rzrMwyAimORIMuL7MrRNexBa8uK/TmxW8z5kxR8YJ5rY8P2onZ2/IG+DKCG4kJ4U">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BpMzWqRmxRKgvSzLbmD2Jjt24z4jtZ8+vjqsjDwTwaAwmiBMojisvcimNz7veuFrsOr+lowKB33iuy/LEzj0SZMdDEUVKYydsdCCNXgsiVlFSSRyvZhLBCFA+BE2cOYQ">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
